Removed apt-get upgrade

--- a/debian-exim-send/Dockerfile
+++ b/debian-exim-send/Dockerfile
@@ -6,7 +6,7 @@ FROM debian:jessie
 MAINTAINER Rick Wieman <git@rickw.nl>
 
 # Install exim and xtail (for logs)
-RUN apt-get update && sudo apt-get -y upgrade && apt-get install -y exim4 xtail
+RUN apt-get update && apt-get install -y exim4 xtail
 
 # Add our configuration
 RUN rm -rf /etc/exim4 && mkdir -p /etc/exim4
