--- a/php-apache-ssmtp/ssmtp.conf
+++ b/php-apache-ssmtp/ssmtp.conf
@@ -1,5 +1,5 @@
-# Config file for sSMTP sendmail
-#
+# Configuartion file for sSMTP sendmail
+
 # The person who gets all mail for userids < 1000
 # Make this empty to disable rewriting.
 root=
@@ -10,12 +10,10 @@ root=
 mailhub=exim
 
 # Where will the mail seem to come from?
-rewriteDomain=
+#rewriteDomain=
 
 # The full hostname
-hostname=yourserver.example.com
+#hostname=
 
-# Are users allowed to set their own From: address?
-# YES - Allow the user to specify their own From: address
-# NO - Use the system generated From: address
+# Are users allowed to set their own From: address? (YES/NO)
 FromLineOverride=YES
