Also increased max. POST size for phpmyadmin

--- a/phpmyadmin/php-upload_size.ini
+++ b/phpmyadmin/php-upload_size.ini
@@ -1,3 +1,5 @@
 ; This file increases the upload size limit, so you can upload bigger .sql files.
 
 upload_max_filesize = 20M
+
+post_max_size = 20M
