Increased some other PHP parameters for phpMyAdmin.

--- a/phpmyadmin/php-upload_size.ini
+++ b/phpmyadmin/php-upload_size.ini
@@ -1,5 +1,8 @@
 ; This file increases the upload size limit, so you can upload bigger .sql files.
+; It also increases some other parameters to ensure the correct handling of those files.
 
 upload_max_filesize = 20M
+post_max_size = 21M
+memory_limit = 21M
 
-post_max_size = 20M
+max_input_time = 300
